Fix: PieChart info items aligns with center

--- a/src/components/PieChart/PieChart.module.css
+++ b/src/components/PieChart/PieChart.module.css
@@ -1,12 +1,15 @@
 .pieChart__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
   width: 150px;
-  height: 150px;
+  height: 200px;
 }
 
 .pieChart__info {
   display: flex;
   justify-content: space-evenly;
-  margin-top: 12px;
+  align-items: center;
   font-size: 10px;
   font-weight: 550;
 }
